# cool-tsp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  algo_explainer.md  pyproject.toml
.cursor/rules/: tooling.mdc
.github/workflows/: ci.yml  release.yml
bench/: cool_bench.py  gen_cool_bench.py  perf_bench.py  tsp_demo.ipynb  uniform_300.txt  viz.py
src/mytsp/: __init__.py  cool_solver.py  io.py  models.py  solver.py
src/service/: __init__.py  app.py  logging.py  routes.py  schemas.py  settings.py
tests/: __init__.py  test_api.py  test_io.py  test_models.py  test_solver.py
