[project]
name = "cool-tsp"
version = "0.1.0"
description = "TSP library and FastAPI microservice for the Travelling Salesman Problem"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
viz = [
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "numpy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mytsp", "src/service"]

[tool.ruff]
target-version = "py314"
line-length = 90
src = ["src", "tests", "bench"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["ARG001"]  # unused function argument (e.g. for abstract methods)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]  # allow assert, unused args in tests
"bench/*" = ["ARG", "S101"]  # allow assert, unused args in bench

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "cool_bench.py", "perf_bench.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "bench: benchmark tests (run with: uv run pytest bench/ -v -s -m bench)",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/bench/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
